# ganeti-gentoobootstrap

./: Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  common.sh.in  configure  configure.ac  create  defaults  export  ganeti-instance-gentoobootstrap  ganeti-instance-gentoobootstrap-9999.ebuild  linux-3.16.5-gentoo.config  stage4-amd64-default-stable.spec  verify
examples/catalyst/: stage4-amd64-default-stable.spec
examples/hooks/: grub  hosts  interfaces  timezone
examples/portage/: make.conf  make.profile  package.use
